--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,10 @@ flutter:
     - assets/images/Icon1.png
     - assets/images/Icon2.png
     - assets/images/spain.png
+    - assets/images/tshirt.png
+    - assets/images/sun.png
+    - assets/images/socks.png
+    - assets/images/bread.png
 
 
 
