--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   sqflite: ^2.0.0+4
   path: ^1.8.2
+  http: ^1.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
