Connecting the Home Screen with Each Chapter Cover Screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,16 @@ dependencies:
   sqflite: ^2.0.0+4
   path: ^1.8.2
   http: ^1.2.2
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  sqflite_common_ffi: ^2.3.4
+  sembast: ^3.1.1
 
 dev_dependencies:
   flutter_test:
@@ -216,6 +219,3 @@ flutter:
     - assets/images/chapter_imgs/chap7_nationality.png
     - assets/images/chapter_imgs/chap7_phone_number.png
     - assets/images/chapter_imgs/chap_sun.png
-
-
-
