--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.5
   sqflite_common_ffi: ^2.3.4
   sembast: ^3.1.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
